--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body, html {height: 100%}
 </style>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-pink">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+      WomenInTech<span class="w3-text-purple">.me</span>
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
