--- a/index.html
+++ b/index.html
@@ -1,35 +1,204 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <title>WomenInTech.me</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('https://42f2671d685f51e10fc6-b9fcecea3e50b3b59bdc28dead054ebc.ssl.cf5.rackcdn.com/illustrations/women_day_2m89.svg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
+.myLink {display: none}
 </style>
-<body>
+<body class="w3-light-grey">
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-pink">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-      WomenInTech<span class="w3-text-purple">.me</span>
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Stories from women in tech</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Copyright <a href="http://www.womeintech.me/about" target="_blank">womenintech.me</a>
-  </div>
+<!-- Navigation Bar -->
+<div class="w3-bar w3-white w3-border-bottom w3-xlarge">
+  <a href="#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>WomenInTech<span class="w3-text-black">.me<span></b></a>
+  <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
 </div>
+
+<!-- Header -->
+<!-- Header -->
+<header class="w3-display-container w3-content" style="max-width:1500px;">
+
+
+  <img class="w3-image" src="https://42f2671d685f51e10fc6-b9fcecea3e50b3b59bdc28dead054ebc.ssl.cf5.rackcdn.com/illustrations/women_day_2m89.svg" alt="London" width="1500" height="700" style="min-width:1000px">
+
+  <div class="w3-display-left w3-padding w3-col l6 m8">
+    <div class="w3-container w3-red">
+      <h2><i class="fa fa-bed w3-margin-right"></i>WomenInTech Search</h2>
+    </div>
+    <div class="w3-container w3-white w3-padding-16">
+      <form action="/action_page.php" target="_blank">
+        <div class="w3-row-padding" style="margin:0 -16px;">
+          <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-calendar-o"></i> Start Date</label>
+            <input class="w3-input w3-border" type="text" placeholder="DD MM YYYY" name="CheckIn" required>
+          </div>
+          <div class="w3-half">
+            <label><i class="fa fa-calendar-o"></i> End Date</label>
+            <input class="w3-input w3-border" type="text" placeholder="DD MM YYYY" name="CheckOut" required>
+          </div>
+        </div>
+        <div class="w3-row-padding" style="margin:8px -16px;">
+          <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-location"></i> Location</label>
+     
+            <select name="skills" class="w3-select w3-border">
+  			<option value="bigdata">Big Data</option>
+  			<option value="projectmgr">Project Management</option>
+           	<option value="productmgr">Product Management</option>
+ 		 <option value="coding">Coding</option>
+ 		 <option value="socialmedia">Social Media</option>
+		</select>
+          </div>
+        </div>
+        <button class="w3-button w3-dark-grey" type="submit"><i class="fa fa-search w3-margin-right"></i> Search availability</button>
+      </form>
+    </div>
+  </div>
+
+</header>
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:1100px;">
+
+  <!-- Good offers -->
+  <div class="w3-container w3-margin-top">
+    <h3>Trending</h3>
+    <h6>Last <strong>24</strong> hours.</h6>
+  </div>
+  <div class="w3-row-padding w3-text-white w3-large">
+    <div class="w3-half w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="http://via.placeholder.com/700x700" alt="Jane Doe" style="width:100%">
+        <span class="w3-display-bottomleft w3-padding">Jane Doe</span>
+      </div>
+    </div>
+  
+    <div class="w3-half">
+      <div class="w3-row-padding" style="margin:0 -16px">
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-display-container">
+            <img src="http://via.placeholder.com/350x350" alt="Shi Wong Gon" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Shi Wong Gon</span>
+          </div>
+        </div>
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-display-container">
+            <img src="http://via.placeholder.com/350x350" alt="Maria dela Cruz " style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Maria dela Cruz </span>
+          </div>
+        </div>
+      </div>
+      <div class="w3-row-padding" style="margin:0 -16px">
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-display-container">
+            <img src="http://via.placeholder.com/350x350" alt="Fulaan Fulaan" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Fulaan Fulaan</span>
+          </div>
+        </div>
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-display-container">
+            <img src="http://via.placeholder.com/350x350" alt="Shi Wong Gon" style="width:100%">
+            <span class="w3-display-bottomleft w3-padding">Shi Wong Gon</span>
+          </div>
+        </div>
+        </div>
+  
+        </div>
+ 
+      </div>
+    </div>
+  </div>
+
+  <!-- Explore Nature -->
+  <div class="w3-container">
+    <h3>Explore Women In Tech</h3>
+    <p>Look for skillsets, experiences or attitude in your next team member</p>
+  </div>
+  <div class="w3-row-padding">
+    <div class="w3-half w3-margin-bottom">
+      <img src="http://via.placeholder.com/700x350" alt="Norway" style="width:100%">
+      <div class="w3-container w3-white">
+        <h3>A tech project</h3>
+        <p class="w3-opacity">Tech stack</p>
+        <p>Summary of outcome</p>
+        <button class="w3-button w3-margin-bottom">More</button>
+      </div>
+    </div>
+    <div class="w3-half w3-margin-bottom">
+      <img src="http://via.placeholder.com/700x350" alt="Austria" style="width:100%">
+      <div class="w3-container w3-white">
+        <h3>A people project</h3>
+        <p class="w3-opacity">What I did</p>
+        <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+        <button class="w3-button w3-margin-bottom">More</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Newsletter -->
+  <div class="w3-container">
+    <div class="w3-panel w3-padding-16 w3-black w3-opacity w3-card w3-hover-opacity-off">
+      <h2>Get the best offers first!</h2>
+      <p>Join our newsletter.</p>
+      <label>E-mail</label>
+      <input class="w3-input w3-border" type="text" placeholder="Your Email address">
+      <button type="button" class="w3-button w3-red w3-margin-top">Subscribe</button>
+    </div>
+  </div>
+  
+  <!-- Contact -->
+  <div class="w3-container">
+    <h2>Contact</h2>
+    <p>Sign up to join our network</p>
+    <i class="fa fa-map-marker" style="width:30px"></i> London, UK<br>
+    <i class="fa fa-envelope" style="width:30px"> </i> Email: info@womenintech.me<br>
+    <form action="/action_page.php" target="_blank">
+      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p><button class="w3-button w3-black w3-padding-large" type="submit">SEND MESSAGE</button></p>
+    </form>
+  </div>
+  
+<!-- End page content -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-center w3-opacity w3-margin-bottom">
+  <h5>Find Us On</h5>
+  <div class="w3-xlarge w3-padding-16">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+<script>
+// Tabs
+function openLink(evt, linkName) {
+  var i, x, tablinks;
+  x = document.getElementsByClassName("myLink");
+  for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < x.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
+  }
+  document.getElementById(linkName).style.display = "block";
+  evt.currentTarget.className += " w3-red";
+}
+// Click on the first tablink on load
+document.getElementsByClassName("tablink")[0].click();
+</script>
 
 </body>
 </html>
