--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
   <img class="w3-image" src="https://42f2671d685f51e10fc6-b9fcecea3e50b3b59bdc28dead054ebc.ssl.cf5.rackcdn.com/illustrations/women_day_2m89.svg" alt="London" width="1500" height="700" style="min-width:1000px">
 
-  <div class="w3-display-left w3-padding w3-col l6 m8">
+  <div class="w3-display-left w3-padding w3-col l6 m8 w3-padding-16">
     <div class="w3-container w3-red">
-      <h2><i class="fa fa-bed w3-margin-right"></i>WomenInTech Search</h2>
+      <h2><i class="fa fa-venus w3-margin-right"></i>WomenInTech Search</h2>
     </div>
     <div class="w3-container w3-white w3-padding-16">
       <form action="/action_page.php" target="_blank">
@@ -41,7 +41,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
             <input class="w3-input w3-border" type="text" placeholder="DD MM YYYY" name="CheckOut" required>
           </div>
         </div>
-        <div class="w3-row-padding" style="margin:8px -16px;">
+	 <div class="w3-row-padding" style="margin:8px -16px;">
+          <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-location"></i> Location</label>
+     
+            <select name="skills" class="w3-select w3-border">
+  			<option value="bigdata">Big Data</option>
+  			<option value="projectmgr">Project Management</option>
+           	<option value="productmgr">Product Management</option>
+ 		 <option value="coding">Coding</option>
+ 		 <option value="socialmedia">Social Media</option>
+		</select>
+          </div>
           <div class="w3-half w3-margin-bottom">
             <label><i class="fa fa-location"></i> Location</label>
      
