--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px;">
 
-  <!-- Good offers -->
+  <!-- Trending -->
   <div class="w3-container w3-margin-top">
     <h3>Trending</h3>
     <h6>Last <strong>24</strong> hours.</h6>
@@ -131,27 +131,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <!-- Photo grid -->
   <div class="w3-row w3-grayscale-min">
     <div class="w3-quarter">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
    </div>
     
    <div class="w3-quarter">
-      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="http://via.placeholder.com/400x400g" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
     </div>
     
     <div class="w3-quarter">
-      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
+      <img src="http://via.placeholder.com/400x400 style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
     </div>
 
     <div class="w3-quarter">
-      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
     </div>
   </div>
 
