--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   </div>
 
 </header>
+<div class="w3-container">
+    <h3>Explore Projects by Women In Tech</h3>
+    <p>Look at achievements, passion and potential</p>
+  </div>
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px;">
