--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <!-- Photo grid -->
   <div class="w3-row w3-grayscale-min">
     <div class="w3-quarter">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
    </div>
     
    <div class="w3-quarter">
-      <img src="http://via.placeholder.com/400x400g" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="http://via.placeholder.com/400x400g" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
     </div>
     
     <div class="w3-quarter">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="http://via.placeholder.com/400x400 style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
     </div>
 
     <div class="w3-quarter">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
+      <img src="http://via.placeholder.com/400x400" style="width:100%" onclick="onClick(this)" alt="Women In Tech Showcase">
     </div>
   </div>
 
