--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <header class="w3-display-container w3-content" style="max-width:1500px;">
 
 
-  <img class="w3-image" src="https://42f2671d685f51e10fc6-b9fcecea3e50b3b59bdc28dead054ebc.ssl.cf5.rackcdn.com/illustrations/women_day_2m89.svg" alt="London" width="1500" height="700" style="min-width:1000px">
+  <img class="w3-image" src="./womenintech.svg" alt="London" width="1500" height="700" style="min-width:1000px">
 
   <div class="w3-display-left w3-padding w3-col l6 m8 w3-padding-16">
     <div class="w3-container w3-red">
