--- a/index.html
+++ b/index.html
@@ -18,9 +18,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <a href="#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
 </div>
 
+<!-- Header with full-height image -->
+<header class="w3-display-container w3-grayscale-min" id="home">
+	<img class="w3-image" src="./womenintech.svg" alt="London" width="1500" height="700" style="min-width:1000px">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small">Join a community that cares.</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Join a community that cares</span><br>
+    <span class="w3-large">Working together, we are stronger and more successful.</span>
+    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+  </div> 
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+</header>
 <!-- Header -->
-<!-- Header -->
-<header class="w3-display-container w3-content" style="max-width:1500px;">
+<div class="w3-display-container w3-content" style="max-width:1500px;">
 
 
   <img class="w3-image" src="./womenintech.svg" alt="London" width="1500" height="700" style="min-width:1000px">
@@ -70,7 +87,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     </div>
   </div>
 
-</header>
+</div>
 <div class="w3-container">
     <h3>Explore Projects by Women In Tech</h3>
     <p>Look at achievements, passion and potential</p>
