--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-display-left w3-text-red" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">Join a community that cares.</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Join a community that cares</span><br>
-    <span class="w3-large">Working together, we are stronger and more successful.</span>
+    <span class="w3-large">Working together, we can break down barriers and make a difference.</span>
     <p><a href="#about" class="w3-button w3-red w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
