--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>WomenInTech.me</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:title" content="WomenInTech.me"/>
+<meta property="og:image" content="https://womenintech.github.io/blob/master/womenintech.svg"/>
+<meta property="og:site_name" content="WomenInTech.me "/>
+<meta property="og:description" content="Community for women to support each other in technology in order to achieve gender parity and also a happier work/life balance">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
