--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta property="og:url" content="womenintech.me">
 <meta property="og:description" content="Community for women to support each other in technology in order to achieve gender parity and also a happier work/life balance>
 <meta property="og:image" content="https://github.com/womenintech/womenintech.github.io/blob/master/womenintech.svg">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
