--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <div class="w3-display-container w3-content" style="max-width:1100px;">
 
 <!-- 
-  <img class="w3-image" src="./womenintech.svg" alt="London" width="1500" height="700" style="min-width:1000px">
+  <img class="w3-image" src="./womenintech.svg" alt="London" width="1500" height="700" style="width:100%"">
  -->
   <div class="w3-display-center w3-padding w3-col l6 m8 w3-padding-16">
     <div class="w3-container w3-red">
