--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:title" content="Women In Technology">
 <meta property="og:site_name" content="WomenInTech.me">
 <meta property="og:url" content="womenintech.me">
-<meta property="og:description" content="Community for women to support each other in technology in order to achieve gender parity and also a happier work/life balance>
+<meta property="og:description" content="Community for women to support each other in technology in order to achieve gender parity and also a happier work/life balance">
 <meta property="og:image" content="https://github.com/womenintech/womenintech.github.io/blob/master/womenintech.svg">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
