--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/theme.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <title>Mentor</title>
 </head>
