--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" aria-label="Main navigation">
             <div class="container">
                 <a class="navbar-brand text-dark" href="index.html">
-                    <img src="https://raw.githubusercontent.com/womenintech/womenintech.github.io/master/favicon.ico" alt="Women In Tech Mentor Logo">
+                     <b><i class="fa fa-comments-o"></i>WomenInTech<span class="p-3 mb-2 bg-primary text-white">.me<span></b></a>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars fa-lg"></i>
