--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a class="btn btn-pill btn-primary" href="components.html" role="button">Learn more</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://pixabay.com/get/ea34b80629f2053ed1534705fb0938c9bd22ffd41cb2164497f0c978ae/webinar-3199164_1920.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
+                    <img src="images/webchat.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
                 </div>
             </div>
         </div>
