--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
                 </div>
                 <div class="col-lg-6 order-lg-1">
-                    <img src="https://cdn.pixabay.com/photo/2014/09/15/21/46/pencils-447481_1280.jpg" class="img-fluid img-thumbnail" alt="Matching algorithm image">
+                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
                 </div>
 
             </div>
