--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Goole fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700%7CMerriweather+Sans:300,400,700" rel="stylesheet">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" aria-label="Main navigation">
             <div class="container">
                 <a class="navbar-brand text-dark" href="index.html">
-                    <img src="https://raw.githubusercontent.com/womenintech/womenintech.github.io/master/favicon.ico" alt="Women In Tech Mentor Logo">
+                     <b><i class="fa fa-comments-o"></i>WomenInTech<span class="p-3 mb-2 bg-primary text-white">.me<span></b></a>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars fa-lg"></i>
@@ -69,7 +69,7 @@
                     <a class="btn btn-pill btn-primary" href="components.html" role="button">Learn more</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://pixabay.com/get/ea34b80629f2053ed1534705fb0938c9bd22ffd41cb2164497f0c978ae/webinar-3199164_1920.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
+                    <img src="images/webchat.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
                 </div>
             </div>
         </div>
@@ -197,7 +197,7 @@
                     <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
                 </div>
                 <div class="col-lg-6 order-lg-1">
-                    <img src="https://cdn.pixabay.com/photo/2014/09/15/21/46/pencils-447481_1280.jpg" class="img-fluid img-thumbnail" alt="Matching algorithm image">
+                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
                 </div>
 
             </div>
