--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentors<i class="fas fa-angle-down fa-sm ml-1"></i></a>
                             <div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
-                                <a class="dropdown-item" href="landing.html">Landing</a>
+                                <a class="dropdown-item" href="landing.html">Why should I Mentor?</a>
                                 <a class="dropdown-item" href="about.html">About</a>
                                 <a class="dropdown-item" href="contact.html">Contact</a>
-                                <a class="dropdown-item" href="error.html">404</a>
                             </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="mentees.html">Mentees</a>
-                        </li>
+                        <li class="nav-item dropdown ">
+                                  <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentees<i class="fas fa-angle-down fa-sm ml-1"></i></a>
+                       		<div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
+                                <a class="dropdown-item" href="landing.html">Why be a Mentee?</a>
+                                <a class="dropdown-item" href="about.html">About</a>
+                                <a class="dropdown-item" href="contact.html">Contact</a>
+                            </div>
+			    </li>
                         <li class="nav-item">
                             <a class="nav-link" href="training.html">Training</a>
                         </li>
