--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
+			     <a class="nav-link" href="mentors.html">Mentors</a>
+			      <a class="nav-link" href="mentees.html">Mentees</a>
+<!--                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentors<i class="fas fa-angle-down fa-sm ml-1"></i></a>
                             <div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
                                 <a class="dropdown-item" href="landing.html">Why should I Mentor?</a>
@@ -52,7 +54,7 @@
                                 <a class="dropdown-item" href="about.html">About</a>
                                 <a class="dropdown-item" href="contact.html">Contact</a>
                             </div>
-			    </li>
+			    </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="training.html">Training</a>
                         </li>
@@ -70,7 +72,7 @@
                 <div class="col-lg-6">
                     <h1 class="display-4">Can you spare 1 hour a week?</h1>
                     <p class="lead mb-4">Get Matched to Give or Receive Mentoring over 12 weeks</p>
-                    <a class="btn btn-pill btn-primary" href="components.html" role="button">Learn more</a>
+                    <a class="btn btn-pill btn-primary" href="#features" role="button">Learn more</a>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/webchat.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
@@ -148,7 +150,7 @@
                     <div class="mb-4">
                         <a class="btn btn-pill btn-primary" href="#" role="button">Get started now</a>
                     </div>
-                    <a class="link-cta" href="#">Learn More</a>
+                    <a class="link-cta" href="#features">Learn More</a>
                 </div>
             </div>
 
@@ -183,7 +185,7 @@
         </div><!-- end bg-skew -->
 
         <!-- Features -->
-        <div class="container">
+        <div id="features" class="container">
             <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
                 <div class="col-lg-5 mb-4 mb-lg-0">
                     <h2>A new way</h2>
