--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a class="btn btn-pill btn-primary" href="#features" role="button">Learn more</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/webchat.jpg" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
+                    <img src="images/mentoring.gif" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
                 </div>
             </div>
         </div>
