--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                 <div class="col-lg-6">
                     <h1 class="display-4">Can you spare 1 hour a week?</h1>
                     <p class="lead mb-4">Get Matched to Give or Receive Mentoring over 12 weeks</p>
-                    <a class="btn btn-pill btn-primary" href="#features" role="button">Learn more</a>
+			    <div class="mb-4">
+                        <a class="btn btn-pill btn-primary" href="#sign-up" role="button">Get started now</a>
+                    </div>
+                    <a class="link-cta" href="#features">Learn More</a>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/mentoring.gif" class="d-none d-lg-block img-fluid img-thumbnail" alt="Mentoring process">
@@ -193,7 +196,7 @@
                     <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://cdn.pixabay.com/photo/2016/10/23/17/06/calendar-1763587_1280.png" class="img-fluid img-thumbnail" alt="Weekly calendar">
+                    <img src="images/calendar.jpg" class="img-fluid img-thumbnail" alt="Weekly calendar">
                 </div>
             </div>
             <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
@@ -283,10 +286,10 @@
                 <div class="col-4 col-md-2 mb-4">
                     <h3 class="h5 mb-3">About</h3>
                     <ul class="nav flex-column">
-                        <li class="mb-1"><a href="#">About</a></li>
-                        <li class="mb-1"><a href="#">Team</a></li>
-                        <li class="mb-1"><a href="#">Careers</a></li>
-                        <li class="mb-1"><a href="#">Blog</a></li>
+                        <li class="mb-1"><a href="about.html">About</a></li>
+                        <li class="mb-1"><a href="#about.html#team">Team</a></li>
+                        <li class="mb-1"><a href="#careers.html">Careers</a></li>
+                        <li class="mb-1"><a href="#blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="col-4 col-md-2 mb-4">
