--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="https://github.com/womenintech/womenintech.github.io/blob/master/womenintech.svg">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <body>
-  <!-- Goole fonts -->
+  <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700%7CMerriweather+Sans:300,400,700" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
