--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center text-uppercase pt-3 pt-lg-0 ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="#">Home</a>
                         </li>
-			     <a class="nav-link" href="mentors.html">Mentors</a>
-			      <a class="nav-link" href="mentees.html">Mentees</a>
+			     <a class="nav-link" href="index.html#mentors">Mentors</a>
+			      <a class="nav-link" href="index.html#mentees">Mentees</a>
 <!--                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentors<i class="fas fa-angle-down fa-sm ml-1"></i></a>
                             <div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
@@ -158,13 +158,13 @@
             </div>
 
             <!-- Testimonials -->
-            <div class="container">
-                <h2 class="h3 mt-5 mb-4 text-center">What people are saying…</h2>
+            <div class="container" id="mentors">
+                <h2 class="h3 mt-5 mb-4 text-center">What our Mentors are saying…</h2>
                 <div class="row py-5">
                     <div class="col-md">
                         <blockquote class="bg-white rounded shadow mb-4 p-4 p-lg-5 text-center">
                             <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2017/01/31/19/16/african-2026579_1280.png" alt="Rainey">
-                            <p class="text-secondary">OMG! This is amazing. My mentor gave me targets for next week and I pushed myself to do it straight away because I didn't want to let him down!</p>
+                            <p class="text-secondary">I get 1 day a week at work for my own projects, happy to squeeze my hour in there!</p>
                             <cite class="small text-uppercase">Rainey</cite>
                         </blockquote>
                     </div>
@@ -180,6 +180,33 @@
                             <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2017/01/31/17/17/baby-2025691_1280.png" alt="Mother and child">
                             <p class="text-secondary">Sign me up!</p>
                             <cite class="small text-uppercase">Danilo</cite>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+		
+		 <div class="container" id="mentees">
+                <h2 class="h3 mt-5 mb-4 text-center">What our Mentees are saying…</h2>
+                <div class="row py-5">
+                    <div class="col-md">
+                        <blockquote class="bg-white rounded shadow mb-4 p-4 p-lg-5 text-center">
+                            <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2017/01/31/19/16/african-2026579_1280.png" alt="Rainey">
+                            <p class="text-secondary">OMG! This is amazing. My mentor gave me targets for next week and I pushed myself to do it straight away because I didn't want to let him down!</p>
+                            <cite class="small text-uppercase">Rainey</cite>
+                        </blockquote>
+                    </div>
+                    <div class="col-md">
+                        <blockquote class="bg-white rounded shadow mb-4 p-4 p-lg-5 text-center">
+                            <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2016/04/25/08/23/man-1351393_1280.png" alt="Rainey">
+                            <p class="text-secondary">I have an interview coming up, can you we speak about this technical item?</p>
+                            <cite class="small text-uppercase">Kate</cite>
+                        </blockquote>
+                    </div>
+                    <div class="col-md">
+                        <blockquote class="bg-white rounded shadow mb-4 p-4 p-lg-5 text-center">
+                            <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2017/01/31/17/17/baby-2025691_1280.png" alt="Mother and child">
+                            <p class="text-secondary">Sign me up!</p>
+                            <cite class="small text-uppercase">Adeola</cite>
                         </blockquote>
                     </div>
                 </div>
