--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
                                     </div>
                                 </div>
                             </div>
+			   <div class="card shadow mb-2">
+                                <div class="card-header" id="headingThree">
+                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <h3 class="card-title">Can I find out more about the mentors/mentees easily without being too committed? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                    <div class="card-body">
+                                        <p>Each person on the site has made a short video and you can watch this for your three matches before selecting them.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
