--- a/index.html
+++ b/index.html
@@ -291,10 +291,22 @@
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
                                     <div class="card-body">
-                                        <p>Each person on the site has made a short video and you can watch this for your three matches before selecting them.</p>
+                                        <p>Each person on the site has made a short video and you can watch this for up to three matches before selecting one.</p>
                                     </div>
                                 </div>
                             </div>
+			  <div class="card shadow mb-2">
+                                <div class="card-header" id="headingThree">
+                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <h3 class="card-title">What happens when I submit my details? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                    <div class="card-body">
+                                        <p>You details will be entered into the Mentor Matching database and we will try to find someone suitable based on the information you have provided </p>
+                                    </div>
+                                </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
