--- a/index.html
+++ b/index.html
@@ -144,7 +144,30 @@
                     </div>
                 </div>
             </div>
+	        <!-- Features -->
+        <div id="features" class="container">
+            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
+                <div class="col-lg-5 mb-4 mb-lg-0">
+                    <h2>A new way</h2>
+                    <hr class="sep border-primary ml-0 mb-3 text-left">
+                    <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/calendar.jpg" class="img-fluid img-thumbnail" alt="Weekly calendar">
+                </div>
+            </div>
+            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
+                <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0">
+                    <h2>Recommended Matches</h2>
+                    <hr class="sep border-primary ml-0 mb-3 text-left">
+                    <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
+                </div>
 
+            </div>
+        </div>
             <!-- Call to action -->
             <hr class="sep border-primary">
             <div class="container py-5">
@@ -213,31 +236,6 @@
             </div>
 
         </div><!-- end bg-skew -->
-
-        <!-- Features -->
-        <div id="features" class="container">
-            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
-                <div class="col-lg-5 mb-4 mb-lg-0">
-                    <h2>A new way</h2>
-                    <hr class="sep border-primary ml-0 mb-3 text-left">
-                    <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
-                </div>
-                <div class="col-lg-6">
-                    <img src="images/calendar.jpg" class="img-fluid img-thumbnail" alt="Weekly calendar">
-                </div>
-            </div>
-            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
-                <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0">
-                    <h2>Recommended Matches</h2>
-                    <hr class="sep border-primary ml-0 mb-3 text-left">
-                    <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
-                </div>
-
-            </div>
-        </div>
 
         <div class="bg-skew bg-skew-light">
 
@@ -332,7 +330,7 @@
             <div class="row justify-content-md-between">
                 <div class="col-sm-12 col-md-4 mb-4">
                     <h3 class="h5 mb-3">Company</h3>
-                    <p>WomenInTech.me is a mentor matching service to help connect women with people who can guide them at all stages in their careers</p>
+                    <p>WomenInTech.me is a mentor matching service to help connect women with people who can guide them at all stages in their careers.</p>
                 </div>
                 <div class="col-4 col-md-2 mb-4">
                     <h3 class="h5 mb-3">About</h3>
