--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/calendar.jpg" class="img-fluid img-thumbnail" alt="Weekly calendar">
+                    <img src="images/calendar.png" class="img-fluid img-thumbnail" alt="Weekly calendar">
                 </div>
             </div>
             <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
