--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
                     </div>
                 </div>
             </div>
+		
+		            <!-- Call to action -->
+            <hr class="sep border-primary">
+            <div class="container py-5">
+                <div class="text-center">
+                    <h2 class="mb-4">Change your life</h2>
+                    <div class="mb-4">
+                        <a class="btn btn-pill btn-primary" href="#" role="button">Get started now</a>
+                    </div>
+                    <a class="link-cta" href="#features">Learn More</a>
+                </div>
+</div>
 	        <!-- Features -->
         <div id="features" class="container">
             <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
@@ -282,24 +294,24 @@
                                 </div>
                             </div>
 			   <div class="card shadow mb-2">
-                                <div class="card-header" id="headingThree">
-                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header" id="headingFour">
+                                    <a class="collapsed" href="#collapseFour" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                         <h3 class="card-title">Can I find out more about the mentors/mentees easily without being too committed? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
                                     </a>
                                 </div>
-                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
                                     <div class="card-body">
                                         <p>Each person on the site has made a short video and you can watch this for up to three matches before selecting one.</p>
                                     </div>
                                 </div>
                             </div>
 			  <div class="card shadow mb-2">
-                                <div class="card-header" id="headingThree">
-                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <div class="card-header" id="headingFive">
+                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                                         <h3 class="card-title">What happens when I submit my details? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
                                     </a>
                                 </div>
-                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionQuestions">
                                     <div class="card-body">
                                         <p>You details will be entered into the Mentor Matching database and we will try to find someone suitable based on the information you have provided </p>
                                     </div>
