--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			   <div class="card shadow mb-2">
                                 <div class="card-header" id="headingFour">
                                     <a class="collapsed" href="#collapseFour" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                        <h3 class="card-title">Can I find out more about the mentors/mentees easily without being too committed? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
+                                        <h3 class="card-title">Can I find out more about the mentors/mentees before I join the session? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
                                     </a>
                                 </div>
                                 <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
