--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>WomenInTech.me</title>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta property="og:title" content="Women In Technology">
+<meta property="og:title" content="Women In Technology Mentor Matching and Career Support">
 <meta property="og:site_name" content="WomenInTech.me">
 <meta property="og:url" content="womenintech.me">
 <meta property="og:description" content="Community to help women through mentoring to help break the glass ceiling in Technology">
@@ -158,6 +158,7 @@
 </div>
 	        <!-- Features -->
         <div id="features" class="container">
+	 <h2 class="h3 mt-5 mb-4 text-center">What we offer…</h2>
             <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
                 <div class="col-lg-5 mb-4 mb-lg-0">
                     <h2>A new way</h2>
@@ -184,7 +185,7 @@
             <hr class="sep border-primary">
             <div class="container py-5">
                 <div class="text-center">
-                    <h2 class="mb-4">Change your life</h2>
+                    <h2 class="mb-4">Make a difference</h2>
                     <div class="mb-4">
                         <a class="btn btn-pill btn-primary" href="#" role="button">Get started now</a>
                     </div>
