--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home</a>
                         </li>
-			     <a class="nav-link" href="index.html#mentors">Mentors</a>
-			      <a class="nav-link" href="index.html#mentees">Mentees</a>
-<!--                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentors<i class="fas fa-angle-down fa-sm ml-1"></i></a>
+                       <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentoring<i class="fas fa-angle-down fa-sm ml-1"></i></a>
                             <div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
-                                <a class="dropdown-item" href="landing.html">Why should I Mentor?</a>
+				<a class="dropdown-item" href="index.html#mentors">Mentors</a>
+			      <a class="dropdown-item" href="index.html#mentees">Mentees</a>
+<!--                                 <a class="dropdown-item" href="landing.html">Why should I Mentor?</a>
                                 <a class="dropdown-item" href="about.html">About</a>
-                                <a class="dropdown-item" href="contact.html">Contact</a>
+                                <a class="dropdown-item" href="contact.html">Contact</a> -->
                             </div>
                         </li>
-                        <li class="nav-item dropdown ">
+<!--                         <li class="nav-item dropdown ">
                                   <a class="nav-link dropdown-toggle" href="#" id="DropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mentees<i class="fas fa-angle-down fa-sm ml-1"></i></a>
                        		<div class="dropdown-menu mb-2" aria-labelledby="DropdownMenu">
                                 <a class="dropdown-item" href="landing.html">Why be a Mentee?</a>
@@ -55,8 +55,11 @@
                                 <a class="dropdown-item" href="contact.html">Contact</a>
                             </div>
 			    </li> -->
+			<li class="nav-item">
+                            <a class="nav-link" href="events.html">Events</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="training.html">Training</a>
+                            <a class="nav-link" href="paygap.html">The Pay Gap</a>
                         </li>
                     </ul>
                 </div>
@@ -199,7 +202,7 @@
                 <div class="row py-5">
                     <div class="col-md">
                         <blockquote class="bg-white rounded shadow mb-4 p-4 p-lg-5 text-center">
-                            <img class="avatar avatar-md mb-4" src="https://cdn.pixabay.com/photo/2017/01/31/19/16/african-2026579_1280.png" alt="Rainey">
+                            <img class="avatar avatar-md mb-4" src="" alt="Rainey">
                             <p class="text-secondary">I get 1 day a week at work for my own projects, happy to squeeze my hour in there!</p>
                             <cite class="small text-uppercase">Rainey</cite>
                         </blockquote>
