--- a/mentoring.html
+++ b/mentoring.html
@@ -73,7 +73,7 @@
                     <h1 class="display-4">Can you spare 1 hour a week?</h1>
                     <p class="lead mb-4">Get Matched to Give or Receive Mentoring over 12 weeks</p>
 			    <div class="mb-4">
-                        <a class="btn btn-pill btn-primary" href="#sign-up" role="button">Get started now</a>
+                        <a class="btn btn-pill btn-primary" href="bit.ly/mentororbementored" role="button">Get started now</a>
                     </div>
                     <a class="link-cta" href="#features">Learn More</a>
                 </div>
